src/test/ui/error-codes/E0431.stderr
error[E0431]: `self` import can only appear in an import list with a non-empty prefix
  --> $DIR/E0431.rs:11:6
   |
11 | use {self}; //~ ERROR E0431
   |      ^^^^ can only appear in an import list with a non-empty prefix

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0431"
